# csharp-driver

./: .gitattributes  .gitignore  .nav  .travis.yml  BigDecimalSample.sln  CHANGELOG.md  CONTRIBUTING.md  Cassandra.MyTest.sln  Cassandra.Net.Net20.sln  Cassandra.Net.sln  Cassandra.Net20.sln  Cassandra.sln  Cassandra.vsmdi  Documentation.sln  Jenkinsfile  Jenkinsfile-shared.groovy  Jenkinsfile.scheduled  Local.testsettings  Makefile  NOTICE  NOTICE.txt  README.md  README.rst  TraceAndTestImpact.testsettings  appveyor.yml  appveyor_install.ps1  build.yaml  buildps.ps1  csharp-driver.build  docs.yaml  doxyfile  doxyfile_csharp  global.json  gotest  gotest.bat  make.bat  renovate.json
docs/: Makefile  pyproject.toml
docs/_utils/: redirects.yaml
docs/source/: conf.py  datastax-api-reference.md  index.md
docs/source/api-docs/: README.md  docfx.json  toc.yml
docs/source/examples/: index.md
docs/source/features/: index.md
docs/source/features/auth/: index.md
docs/source/features/automatic-failover/: index.md
docs/source/features/column-encryption/: index.md
docs/source/features/components/: index.md
docs/source/features/connection-heartbeat/: index.md
docs/source/features/datatypes/: index.md
docs/source/features/execution-profiles/: index.md
docs/source/features/graph-support/: index.md
docs/source/features/metadata/: index.md
docs/source/features/metrics/: index.md
docs/source/features/native-protocol/: index.md
docs/source/features/opentelemetry/: index.md
docs/source/features/paging/: index.md
docs/source/upgrade-guide/: index.md
(+4376 files in other folders)
