[tool.poetry]
name = "sphinx-docs"
description = "ScyllaDB C Sharp driver documentation"
version = "0.1.0"
authors = ["ScyllaDB Documentation Contributors"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
pygments = "^2.19.2"
sphinx-scylladb-theme = "^1.8.1"
myst-parser = "^4.0.1"
sphinx-autobuild = "^2025.0.0"
Sphinx = "^8.0.0"
sphinx-multiversion-scylla = "^0.3.1"
sphinx-sitemap = "^2.8.0"
redirects_cli ="^0.1.3"

[build-system]
requires = ["poetry>=1.8.0"]
build-backend = "poetry.masonry.api"
